--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,9 +1,9 @@
 FROM node:20-alpine
 
-WORKDIR /app
+WORKDIR /www
 
-COPY . /app
+COPY . /www
 
-RUN yarn
+RUN yarn install
 
-CMD yarn dev
+CMD yarn run dev
